--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ android {
         }
     }
     compileSdkVersion 23
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.bybick.lacteosjolla"
         minSdkVersion 17
-        targetSdkVersion 23
-        versionName '1.5'
+        targetSdkVersion 26
+        versionName '3.19'
         versionCode 1
     }
     buildTypes {
@@ -25,10 +25,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:23.2.1'
+    implementation 'com.android.support:design:23.2.1'
     //Number Material
-    compile 'biz.kasual:materialnumberpicker:1.2.1'
+    implementation 'biz.kasual:materialnumberpicker:1.2.1'
 }
